Basic integrations frame work.  WIP on Stripe integration

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,7 +38,7 @@
                     %i.entypo-users
                     %span
                       Community
-              %li{:class => active_tab(["spaces", "admins", "locations", "resources", "plans"])}
+              %li{:class => active_tab(["spaces", "admins", "locations", "resources", "plans", "integrations", "stripes"])}
                 - if @space
                   %a{:href => edit_space_path(@space)}
                     %i.entypo-cog
