--- a/app/views/shared/_stripe_js.html.erb
+++ b/app/views/shared/_stripe_js.html.erb
@@ -22,7 +22,7 @@
    };
    
    jQuery(function($) {
-     $('.xpayment_method_form').submit(function(event) {
+     $('.payment_method_form').submit(function(event) {
        var form = $(this);
 
        // Disable the submit button to prevent repeated clicks
