Added (temporary at least) Send Invite link to trigger member sign up flow.  Small bug fix

--- a/app/views/member_portal/account.html.haml
+++ b/app/views/member_portal/account.html.haml
@@ -22,7 +22,7 @@
               %td{style: "text-align:right"}= item.total_amount
 
 .col-md-5
-  - if @gateway
+  - if @gateway && current_member
     %h3 Credit Card
     - if current_member.payment_system_customer_id.blank?
       No card on file, <a href="/credit_card">please enter one.</a>
