Slug -> Subdomain. Redirect to space settings after updateing space settings.  Allow subdmomain in params list

--- a/app/views/spaces/new.html.haml
+++ b/app/views/spaces/new.html.haml
@@ -16,10 +16,13 @@
       = s.label :website 
       = s.text_field :website , class: "form-control"
       = field_errors(@newspace, :website)
-    .form-group{:class => has_error(@newspace, :slug)}
-      = s.label :slug 
-      = s.text_field :slug, class: "form-control" 
-      = field_errors(@newspace, :slug)
+  .form-group{:class => has_error(@newspace, :subdomain)}
+    = f.label :subdomain
+    .input-group
+      %span{class: "input-group-addon"} https://
+      = f.text_field :subdomain, class: "form-control" 
+      %span{class: "input-group-addon"} .membrs.co
+    = field_errors(@newspace, :subdomain)
     .form-group{:class => has_error(@newspace, :plan)}
       = s.label :plan 
       = s.select(:plan, Space.plans, {}, {class: "form-control"})
