--- a/app/assets/stylesheets/font-icons/entypo/css/entypo.css
+++ b/app/assets/stylesheets/font-icons/entypo/css/entypo.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'entypo';
-  src: url('../font/entypo.eot?71205724');
-  src: url('../font/entypo.eot?71205724#iefix') format('embedded-opentype'),
-       url('../font/entypo.woff?71205724') format('woff'),
-       url('../font/entypo.ttf?71205724') format('truetype'),
-       url('../font/entypo.svg?71205724#entypo') format('svg');
+  src: url('/assets/font-icons/entypo//font/entypo.eot?71205724');
+  src: url('/assets/font-icons/entypo//font/entypo.eot?71205724#iefix') format('embedded-opentype'),
+       url('/assets/font-icons/entypo//font/entypo.woff?71205724') format('woff'),
+       url('/assets/font-icons/entypo//font/entypo.ttf?71205724') format('truetype'),
+       url('/assets/font-icons/entypo//font/entypo.svg?71205724#entypo') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'entypo';
-    src: url('../font/entypo.svg?71205724#entypo') format('svg');
+    src: url('/assets/font-icons/entypo//font/entypo.svg?71205724#entypo') format('svg');
   }
 }
 */
