--- a/app/assets/stylesheets/font-icons/entypo/css/entypo-embedded.css
+++ b/app/assets/stylesheets/font-icons/entypo/css/entypo-embedded.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'entypo';
-  src: url('/assets/font-icons/entypo/font/entypo.eot?28561878');
-  src: url('/assets/font-icons/entypo//font/entypo.eot?28561878#iefix') format('embedded-opentype'),
-       url('/assets/font-icons/entypo//font/entypo.svg?28561878#entypo') format('svg');
+  src: url('../font/entypo.eot?28561878');
+  src: url('../font/entypo.eot?28561878#iefix') format('embedded-opentype'),
+       url('../font/entypo.svg?28561878#entypo') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'entypo';
-    src: url('/assets/font-icons/entypo//font/entypo.svg?28561878#entypo') format('svg');
+    src: url('../font/entypo.svg?28561878#entypo') format('svg');
   }
 }
 */
