WIP Payments/Credit notes are now associated with invoices to track paid status.  Some UI improvements related to this

--- a/app/views/member_portal/account.html.haml
+++ b/app/views/member_portal/account.html.haml
@@ -12,6 +12,7 @@
           %th Issued
           %th Due
           %th{style: "text-align:right"} Amount
+          %th
           
         %tbody
           - @ledger_items.each do |item|
@@ -19,7 +20,8 @@
               %td= link_to item_type_description(item), "/#{item.id}/details"
               %td= item.issue_date
               %td= item.is_invoice ? item.due_date : "&nbsp".html_safe
-              %td{style: "text-align:right"}= item.total_amount
+              %td{style: "text-align:right"}= item.total_amount_formatted
+              %td= paid(item)
 
 .col-md-5
   - if @gateway && current_member
