--- a/app/views/credit_notes/_form.html.haml
+++ b/app/views/credit_notes/_form.html.haml
@@ -3,6 +3,7 @@
     Credit Note for
     = @member.name
   = form_for(@credit_note, url: space_member_credit_notes_path(@space, @member, @credit_note)) do |f| 
+    = f.hidden_field :invoice_id
     .form-group{:class => "#{has_error(@credit_note, :description)} col-md-8", style: "padding-left:0;"}
       = f.label :description 
       = f.text_field :description, class: "form-control"
