--- a/app/views/member_portal/details.html.haml
+++ b/app/views/member_portal/details.html.haml
@@ -1,6 +1,6 @@
 .col-md-6.col-md-offset-3
   %h3 #{item_type_description(@item)} Details
-  %h5 #{@item.description} #{@item.total_amount}
+  %h5 #{@item.description} #{@item.total_amount_formatted}
 
   - if @item.line_items.length > 0
     %table.table.line-items{style: "margin-top:25px;"}
@@ -15,8 +15,8 @@
             - next if item.description.blank?
             %tr
               %td= item.description
-              %td{style: "text-align:right"}= item.tax_amount
-              %td{style: "text-align:right"}= (item.net_amount || 0) + (item.tax_amount || 0)
+              %td{style: "text-align:right"}= item.tax_amount_formatted
+              %td{style: "text-align:right"}= item.gross_amount_formatted
 
   = link_to "Back to account", "/"
 
