--- a/app/views/payment_methods/index.html.erb
+++ b/app/views/payment_methods/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Payment Methods</h1>
+<h2>Credit cards on file</h2>
 
 <table class="table">
   <thead>
@@ -27,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New Payment method', new_payment_method_path %>
+<%= link_to 'Add a credit card', new_payment_method_path %>
