--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,4 +1,6 @@
-<div class="col-md-6">
+<div class="row panel" style="padding-bottom:15px;">
+
+<div class="col-md-5">
   <h2>Current Managers</h2>
   
   <table class="table">
@@ -20,7 +22,7 @@
   </table>
 </div>
 
-<div class="col-md-6">
+<div class="col-md-7">
   <h2>People invited to co-manage</h2>
   <table class="table" style="margin-bottom:25px;">
     <thead>
@@ -57,4 +59,6 @@
     </div>
     <%= f.submit 'Send Invite', class: "btn btn-primary" %>
   <% end %>
+</div>
+
 </div>
