--- a/app/views/layouts/devise.html.haml
+++ b/app/views/layouts/devise.html.haml
@@ -9,9 +9,10 @@
 
     = stylesheet_link_tag "jquery-ui-1.10.3.custom.min.css"
     = stylesheet_link_tag 'application', media: 'all'
-    = stylesheet_link_tag "neon-forms.css"
     = stylesheet_link_tag "custom.css"
 
     = javascript_include_tag 'application'
+
+    %link{href: "//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel: "stylesheet"}
 
   = yield
