--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -3,20 +3,19 @@
   <div class="col-md-6">&nbsp;</div>
   
   <div class="col-md-6">
-    <%= link_to "New Member", new_space_member_path(@space), class: "btn btn-default pull-right" -%>
+    <%= link_to "New Member", new_space_member_path(@space), class: "btn btn-primary pull-right" -%>
   </div>
 </div>
 
 
 <div id="members">
   <% @members.each do |member| %>
-    <div class="col-md-2 text-center">
+    <div class="col-md-2 col-xs-6 text-center">
       <div class="well" style="padding:12px;background:#FFF;border:0;">
-      <img style="margin-bottom:10px;" src="<%= member.gravatar_url(:size =>80, :rating => 'G', :secure => true, :default => 'identicon') -%>"/><br/>
+      <img class="img-thumbnail" style="margin-bottom:10px;" src="<%= member.gravatar_url(:size =>80, :rating => 'G', :secure => true, :default => 'identicon') -%>"/><br/>
       <%= member.name %><br/>
       <%= member.email %><br/>
-      <%= link_to 'Billing', account_space_member_path(@space, member) %>
-      <%= link_to 'Edit', edit_space_member_path(@space, member) %>
+      <%= link_to 'View', account_space_member_path(@space, member) %>
       </div>
     </div>
     
