--- a/app/views/spaces/edit.html.erb
+++ b/app/views/spaces/edit.html.erb
@@ -1,3 +1,5 @@
-<div class="col-md-6 col-md-offset-3">
-  <%= render 'form' %>
+<div class="col-md-7">
+  <div class="panel" style="padding:10px;">
+    <%= render 'form' %>
+  </div>
 </div>
