Updating TODO. Fixed bug in edit space form.  Fixed/updated sign up and sign in pages

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
               = value
 
         .container
-          - if select_sub_nav
+          - if current_user && select_sub_nav
             .row
               .col-md-2
                 = render select_sub_nav
