--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -30,5 +30,5 @@
               %button.btn.btn-success.btn-block.btn-login#submit_form{type: "submit"}
                 %i.entypo-right-open-mini
                 Sign up
-        .login-bottom-links
+        .login-bottom-links.text-center
           = link_to "Already have an account? Sign in here.", "/users/sign_in", class: "link"
