Sign up to create account on button

--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -29,6 +29,6 @@
             .form-group
               %button.btn.btn-success.btn-block.btn-login#submit_form{type: "submit"}
                 %i.entypo-right-open-mini
-                Sign up
+                Create Account
         .login-bottom-links.text-center
           = link_to "Already have an account? Sign in here.", "/users/sign_in", class: "link"
