--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,14 +1,48 @@
 
 <div class="row">
-  <h2 class="col-md-6" style="padding-top:0;margin-top:0;">Member Billing: <%=@member.name -%></h2>
+  <h3 class="col-md-3" style="padding-top:0;margin-top:0;">
+    <img class="img-thumbnail" style="margin-bottom:10px;" src="<%= @member.gravatar_url(:size =>40, :rating => 'G', :secure => true, :default => 'identicon') -%>"/>
+    <%= @member.name -%></h3>
   
-  <div class="col-md-6">
-    <%= link_to "New Invoice", new_space_member_invoice_path(@space, @member), class: "btn btn-default pull-right" -%>
+  <div class="col-md-6 text-center">
+    <div class="row text-left">
+      <div class="col-md-3">
+        <small>EMAIL</small><br/>
+        <%= @member.email-%>
+      </div>
+      <div class="col-md-3">
+        <small>PLAN</small><br/>
+        <%= @member.plan.nil? ? "&lt;No Plan&gt;".html_safe : @member.plan.name -%>
+      </div>
+      <div class="col-md-3">
+        <small>JOINED</small><br/>
+        <%= @member.created_at.strftime("%B %d, %Y")-%>
+      </div>
+      <div class="col-md-3">
+        <small>STATUS</small><br/>
+        <%= "Active" -%>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-3">
+    <%= link_to "Edit Member", edit_space_member_path(@space, @member), class: "btn btn-default pull-right" -%>
   </div>
 </div>
 
+<hr/>
+
 <!--
+  TODO Put in metrics blocks
 -->
+
+<div class="row">
+  <h3 class="col-md-6" style="padding-top:0;margin-top:0;">Invoice History</h3>
+  
+  <div class="col-md-6">
+    <%= link_to "New Invoice", new_space_member_invoice_path(@space, @member), class: "btn btn-primary pull-right" -%>
+  </div>
+</div>
 
 <table class="table ledger-items" style="margin-top:25px;">
   <thead>
@@ -54,3 +88,9 @@
   </tbody>
 
 </table>
+
+<hr/>
+
+<div class="row">
+  <h3 class="col-md-12" style="padding-top:0;margin-top:0;">Recent Transaction Activity</h3>  
+</div>
